--- a/NNZFSC/Views/RegisterMember/Details.cshtml
+++ b/NNZFSC/Views/RegisterMember/Details.cshtml
@@ -81,66 +81,235 @@
 
 
 
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <title>Dashboard</title>
 
-<h2>Details</h2>
+    <!--- CSS-->
+    @*<link href="~/Dashboard/font-face.css" rel="stylesheet" media="all" />*@
+    @*<link href="~/Dashboard/font-awesome.min.css" rel="stylesheet" media="all" />*@
+    @*<link href="~/Dashboard/fontawesome-all.min.css" rel="stylesheet" media="all" />*@
+    @*<link href="~/Dashboard/material-design-iconic-font.min.css" rel="stylesheet" media="all" />*@
+    <link href="~/Dashboard/bootstrap.min.css" rel="stylesheet" media="all" />
 
-<div class="row">
-    <div class="col-md-4" style="border-right:outset">
+    <link href="~/Dashboard/animsition.min.css" rel="stylesheet" media="all" />
+    @*<link href="~/Dashboard/bootstrap-progressbar-3.3.4.min.css" rel="stylesheet" media="all" />
+    <link href="~/Dashboard/animate.css" rel="stylesheet" media="all"/>*@
+    <link href="~/Dashboard/hamburgers.min.css" rel="stylesheet" media="all" />
+    @*<link href="~/Dashboard/slick.css" rel="stylesheet" media="all" />
+        <link href="~/Dashboard/select2.min.css" rel="stylesheet" media="all" />*@
+    @*<link href="~/Dashboard/perfect-scrollbar.css" rel="stylesheet" media="all" />*@
 
-        <div class="text-center">
 
-            <img src="~/img/NNZFSC_Logo.jpg" class="avatar img-circle" alt="avatar" height="150" width="150">
-        </div>
-        <br />
-        <div class="text-center">
-            @Html.LabelFor(model => model.MemberId, htmlAttributes: new { @class = "control-label col-md-4" })
-            @Html.TextBoxFor(model => model.MemberId, new { @class = "form-control", @readonly = true, style = "width: 45%; display:inline-block;" })
+    <link href="~/Dashboard/theme.css" rel="stylesheet" />
 
-        </div>
-        <br />
-        <div class="text-center">
-            @Html.LabelFor(model => model.MemberFirstName, htmlAttributes: new { @class = "control-label col-md-4" })
-            @Html.TextBoxFor(model => model.MemberFirstName, new { @class = "form-control", @readonly = true, style = "width: 45%; display:inline-block;" })
 
-        </div>
-        <br />
-        <div class="text-center">
-            @Html.LabelFor(model => model.MemberMiddleName, htmlAttributes: new { @class = "control-label col-md-4" })
-            @Html.TextBoxFor(model => model.MemberMiddleName, new { @class = "form-control", @readonly = true, style = "width: 45%; display:inline-block;" })
+</head>
+<body class="animsition">
+    <div class="page-wrapper">
+        <!-- HEADER MOBILE-->
+        <header class="header-mobile d-block d-lg-none">
+            <div class="header-mobile__bar">
+                <div class="container-fluid">
+                    <div class="header-mobile-inner">
 
-        </div>
-        <br />
-        <div class="text-center">
-            @Html.LabelFor(model => model.MemberLastName, htmlAttributes: new { @class = "control-label col-md-4" })
-            @Html.TextBoxFor(model => model.MemberLastName, new { @class = "form-control", @readonly = true, style = "width: 45%; display:inline-block;" })
+                        <button class="hamburger hamburger--slider" type="button">
+                            <span class="hamburger-box">
+                                <span class="hamburger-inner"></span>
+                            </span>
+                        </button>
+                    </div>
+                </div>
+            </div>
+            <nav class="navbar-mobile">
+                <div class="container-fluid">
+                    <ul class="navbar-mobile__list list-unstyled">
+                        <li class="has-sub">
+                            <a class="js-arrow" href="#">
+                                <i class="fas fa-tachometer-alt"></i>Dashboard
+                            </a>
+                            <ul class="navbar-mobile-sub__list list-unstyled js-sub-list">
+                                <li>
+                                    <a href="index.html">Member</a>
+                                    @Html.ActionLink(linkText: "Register Member", actionName: "create", controllerName: "RegisterMember")
 
-        </div>
-        <br />
-        <div class="text-center">
-            @Html.LabelFor(model => model.MemberAddress, htmlAttributes: new { @class = "control-label col-md-4" })
-            @Html.TextBoxFor(model => model.MemberAddress, new { @class = "form-control", @readonly = true, style = "width: 45%; display:inline-block;" })
+                                </li>
+                                <li>
+                                    <a href="index2.html">Update Member</a>
+                                    @Html.ActionLink(linkText: "Update Member", actionName: "Edit", controllerName: "RegisterMember", routeValues: new { id = 0 }, htmlAttributes: null)
+                                </li>
+                                <li>
+                                    <a href="index3.html">Payment Details</a>
+                                    @Html.ActionLink(linkText: "Payment Details", actionName: "Details", controllerName: "RegisterMember", routeValues: new { id = 0 }, htmlAttributes: null)
 
-        </div>
-        <br />
-        <div class="text-center">
-            @Html.LabelFor(model => model.EmailAddress, htmlAttributes: new { @class = "control-label col-md-4" })
-            @Html.TextBoxFor(model => model.EmailAddress, new { @class = "form-control", @readonly = true, style = "width: 45%; display:inline-block;" })
+                                </li>
+                                <li>
+                                    <a href="index4.html">Dashboard 4</a>
+                                </li>
+                            </ul>
+                        </li>
 
-        </div>
-        <br />
-        <div class="text-center">
-            @Html.LabelFor(model => model.MembershipDate, htmlAttributes: new { @class = "control-label col-md-4" })
-            @Html.TextBoxFor(model => model.MembershipDate, new { @class = "form-control", @readonly = true, style = "width: 45%; display:inline-block;" })
 
-        </div>
+                        <li>
+                            <a href="form.html">
+                                <i class="far fa-check-square"></i> Member List
+                            </a>
+                        </li>
 
-        <br />
-       
-    </div>
-    <div class="col-md-8">
-        <div>  <h5 class="jumbotron" style="padding:2rem">Member Renew Details</h5></div>
-        <div id="gridContent" style="padding:20px; margin-top:60px">
-            @grid.GetHtml(
+                        <li class="has-sub">
+                            <a class="js-arrow" href="#">
+                                <i class="fas fa-calendar-alt"></i>Events
+                            </a>
+                            <ul class="navbar-mobile-sub__list list-unstyled js-sub-list">
+                                <li>
+                                    <a href="button.html">Create</a>
+                                </li>
+                                <li>
+                                    <a href="badge.html">Update</a>
+                                </li>
+
+                            </ul>
+                        </li>
+
+                    </ul>
+                </div>
+            </nav>
+        </header>
+        <!-- END HEADER MOBILE-->
+        <!-- MENU SIDEBAR-->
+        <aside class="menu-sidebar d-none d-lg-block">
+
+            <div class="menu-sidebar__content js-scrollbar1">
+                <nav class="navbar-sidebar">
+                    <ul class="list-unstyled navbar__list">
+                        <li class="active has-sub">
+                            <a class="js-arrow" href="#">
+                                <i class="fas fa-tachometer-alt"></i>Dashboard
+                            </a>
+                            <ul class="list-unstyled navbar__sub-list js-sub-list">
+                                <li>
+
+                                    @Html.ActionLink(linkText: "Register Member", actionName: "create", controllerName: "RegisterMember")
+                                </li>
+                                <li>
+
+                                    @Html.ActionLink(linkText: "Update Member", actionName: "Edit", controllerName: "RegisterMember", routeValues: new { id = 0 }, htmlAttributes: null)
+                                </li>
+                                <li>
+
+                                    @Html.ActionLink(linkText: "Payment Details", actionName: "Details", controllerName: "RegisterMember", routeValues: new { id = 0 }, htmlAttributes: null)
+
+                                </li>
+                                <li>
+                                    <a href="index4.html">Dashboard 4</a>
+                                </li>
+                            </ul>
+                        </li>
+
+
+                        <li>
+                            <a href="form.html">
+                                <i class="far fa-check-square"></i> Member List
+                            </a>
+                        </li>
+
+                        <li class="has-sub">
+                            <a class="js-arrow" href="#">
+                                <i class="fas fa-calendar-alt"></i>Events
+                            </a>
+                            <ul class="navbar-mobile-sub__list list-unstyled js-sub-list">
+                                <li>
+                                    <a href="button.html">Create</a>
+                                </li>
+                                <li>
+                                    <a href="badge.html">Update</a>
+                                </li>
+
+
+                            </ul>
+                        </li>
+
+                    </ul>
+                </nav>
+            </div>
+        </aside>
+        <!-- END MENU SIDEBAR-->
+        <!-- PAGE CONTAINER-->
+        <!-- HEADER DESKTOP-->
+        <!-- MAIN CONTENT-->
+        <div class="main-content">
+            <div class="section__content section__content--p30">
+                <div class="container-fluid">
+                    <div class="row">
+
+                        <div class="col-md-4">
+
+
+                            <h2>Details</h2>
+
+
+                            <div style="border-right:outset">
+
+                                <div class="text-center">
+
+                                    <img src="~/img/NNZFSC_Logo.jpg" class="avatar img-circle" alt="avatar" height="150" width="150">
+                                </div>
+                                <br />
+                                <div class="text-center">
+                                    @Html.LabelFor(model => model.MemberId, htmlAttributes: new { @class = "control-label col-md-4" })
+                                    @Html.TextBoxFor(model => model.MemberId, new { @class = "form-control", @readonly = true, style = "width: 45%; display:inline-block;" })
+
+                                </div>
+                                <br />
+                                <div class="text-center">
+                                    @Html.LabelFor(model => model.MemberFirstName, htmlAttributes: new { @class = "control-label col-md-4" })
+                                    @Html.TextBoxFor(model => model.MemberFirstName, new { @class = "form-control", @readonly = true, style = "width: 45%; display:inline-block;" })
+
+                                </div>
+                                <br />
+                                <div class="text-center">
+                                    @Html.LabelFor(model => model.MemberMiddleName, htmlAttributes: new { @class = "control-label col-md-4" })
+                                    @Html.TextBoxFor(model => model.MemberMiddleName, new { @class = "form-control", @readonly = true, style = "width: 45%; display:inline-block;" })
+
+                                </div>
+                                <br />
+                                <div class="text-center">
+                                    @Html.LabelFor(model => model.MemberLastName, htmlAttributes: new { @class = "control-label col-md-4" })
+                                    @Html.TextBoxFor(model => model.MemberLastName, new { @class = "form-control", @readonly = true, style = "width: 45%; display:inline-block;" })
+
+                                </div>
+                                <br />
+                                <div class="text-center">
+                                    @Html.LabelFor(model => model.MemberAddress, htmlAttributes: new { @class = "control-label col-md-4" })
+                                    @Html.TextBoxFor(model => model.MemberAddress, new { @class = "form-control", @readonly = true, style = "width: 45%; display:inline-block;" })
+
+                                </div>
+                                <br />
+                                <div class="text-center">
+                                    @Html.LabelFor(model => model.EmailAddress, htmlAttributes: new { @class = "control-label col-md-4" })
+                                    @Html.TextBoxFor(model => model.EmailAddress, new { @class = "form-control", @readonly = true, style = "width: 45%; display:inline-block;" })
+
+                                </div>
+                                <br />
+                                <div class="text-center">
+                                    @Html.LabelFor(model => model.MembershipDate, htmlAttributes: new { @class = "control-label col-md-4" })
+                                    @Html.TextBoxFor(model => model.MembershipDate, new { @class = "form-control", @readonly = true, style = "width: 45%; display:inline-block;" })
+
+                                </div>
+
+                                <br />
+                                <p>
+
+                                    @Html.ActionLink("Back to List", "Index")
+                                </p>
+
+                            </div>
+                        </div>
+                                <div class="col-md-8">
+                                    <div>  <h5 class="jumbotron" style="padding:2rem">Member Renew Details</h5></div>
+                                    <div id="gridContent" style="padding:20px; margin-top:60px" class="table-responsive table--no-card m-b-30">
+                                        @grid.GetHtml(
         tableStyle: "webgrid-table",
         headerStyle: "webgrid-header",
         footerStyle: "webgrid-footer",
@@ -155,18 +324,47 @@
              grid.Column("PaymentAmount", "Payment Amount", format: @<text> <span class="display-mode"> <label id="lblAmount">@item.PaymentAmount</label> </span>  <input type="text" id="Amount" value="@item.PaymentAmount" class="edit-mode" /> </text>, style: "col2Width"),
              grid.Column("NextPaymentDate", "Expiry Date", format: @<text> <span class="display-mode"> <label id="lblNextPaymentDate">@item._NextPaymentDateToDisplay</label> </span>  <input type="text" id="NextPaymentDate-@item.PaymentId" value="@item._NextPaymentDateToDisplay" class="edit-mode" readonly /> </text>, style: "col2Width"),
              grid.Column("Action", format: @<text>
-                    <button class="edit-user display-mode" @item.disable >Edit</button>
-                    <button class="save-user edit-mode">Save</button>
-                    <button class="cancel-user edit-mode">Cancel</button>
-            </text>, style: "col3Width", canSort: false)
+                            <button class="edit-user display-mode" @item.disable>Edit</button>
+                            <button class="save-user edit-mode">Save</button>
+                            <button class="cancel-user edit-mode">Cancel</button>
+                        </text>, style: "col3Width", canSort: false)
            ))
 
+                                    </div>
+
+                                </div>
+
+
+                    </div>
+                </div>
+            </div>
         </div>
 
+
+        <!-- END MAIN CONTENT-->
+        <!-- END PAGE CONTAINER-->
     </div>
 
-</div>
-<p>
-   
-    @Html.ActionLink("Back to List", "Index")
-</p>
+
+    <!--- Script-->
+    <script src="~/Dashboard/jquery-3.2.1.min.js"></script>
+    @*<script src="~/Dashboard/popper.min.js"></script>*@
+    <script src="~/Dashboard/bootstrap.min.js"></script>
+    @*<script src="~/Dashboard/slick.min.js"></script>
+        <script src="~/Dashboard/wow.min.js"></script>*@
+
+    <script src="~/Dashboard/animsition.min.js"></script>
+    @*<script src="~/Dashboard/bootstrap-progressbar.min.js"></script>
+        <script src="~/Dashboard/jquery.waypoints.min.js"></script>
+        <script src="~/Dashboard/jquery.counterup.min.js"></script>
+        <script src="~/Dashboard/circle-progress.min.js"></script>
+        <script src="~/Dashboard/perfect-scrollbar.js"></script>
+
+        <script src="~/Dashboard/Chart.bundle.min.js"></script>
+        <script src="~/Dashboard/select2.min.js"></script>*@
+
+    <script src="~/Dashboard/main.js"></script>
+
+</body>
+
+
