--- a/NNZFSC/Views/RegisterMember/index.cshtml
+++ b/NNZFSC/Views/RegisterMember/index.cshtml
@@ -6,107 +6,294 @@
 }
 
 
-<h2>NNZFSC Members</h2>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <title>Dashboard</title>
 
-<p>
-    @Html.ActionLink("Create New", "Create")
-</p>
+    <!--- CSS-->
 
-<div class="container-fluid">
-    <table class="table">
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.MemberFirstName)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.MemberMiddleName)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.MemberLastName)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.MemberAddress)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.EmailAddress)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.MembershipAmount)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.MembershipDate)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.MembershipExpiryDate)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.MemberImageName)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.MemberImagePath)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.CreateBy)
-            </th>
-            <th></th>
-        </tr>
+    @*<link href="~/Dashboard/font-face.css" rel="stylesheet" media="all" />
+    <link href="~/Dashboard/font-awesome.min.css" rel="stylesheet" media="all" />
+    <link href="~/Dashboard/fontawesome-all.min.css" rel="stylesheet" media="all" />
+    <link href="~/Dashboard/material-design-iconic-font.min.css" rel="stylesheet" media="all" />*@
+    <link href="~/Dashboard/bootstrap.min.css" rel="stylesheet" media="all" />
 
-        @foreach (var item in Model)
-        {
-            <tr>
-                <td>
-                    @Html.DisplayFor(modelItem => item.MemberFirstName)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.MemberMiddleName)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.MemberLastName)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.MemberAddress)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.EmailAddress)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.MembershipAmount)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.MembershipDate)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.MembershipExpiryDate)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.MemberImageName)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.MemberImagePath)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.CreateBy)
-                </td>
-                <td>
-                   
-                    @Html.ActionLink("Edit", "Edit", new { id = item.MemberId }) |
-                    @*@Html.ActionLink("Renew", "Edit", new { id = item.MemberId }) |*@
-                    @Html.ActionLink(
-                                    linkText: "Renew",
-                                    actionName: "Create",
-                                    controllerName: "Payment",
-                                    routeValues: new
-                                    {
-                                        id = item.MemberId
-       
-                                    },
-                                    htmlAttributes: null
-                                    )|
-                                             
-                    @Html.ActionLink("Delete", "Delete", new { id = item.MemberId }, new { onclick = "return confirm('Are you sure you wish to delete this Member Rgistration ?');" })
-                </td>
-            </tr>
-        }
+    <link href="~/Dashboard/animsition.min.css" rel="stylesheet" media="all" />
+    @*<link href="~/Dashboard/bootstrap-progressbar-3.3.4.min.css" rel="stylesheet" media="all" />
+    <link href="~/Dashboard/animate.css" rel="stylesheet" media="all" />*@
+    <link href="~/Dashboard/hamburgers.min.css" rel="stylesheet" media="all" />
+    @*<link href="~/Dashboard/slick.css" rel="stylesheet" media="all" />
+    <link href="~/Dashboard/select2.min.css" rel="stylesheet" media="all" />
+    <link href="~/Dashboard/perfect-scrollbar.css" rel="stylesheet" media="all" />*@
 
-    </table>
-</div>
+
+    <link href="~/Dashboard/theme.css" rel="stylesheet" />
+
+
+</head>
+<body class="animsition">
+    <div class="page-wrapper">
+        <!-- HEADER MOBILE-->
+        <header class="header-mobile d-block d-lg-none">
+            <div class="header-mobile__bar">
+                <div class="container-fluid">
+                    <div class="header-mobile-inner">
+
+                        <button class="hamburger hamburger--slider" type="button">
+                            <span class="hamburger-box">
+                                <span class="hamburger-inner"></span>
+                            </span>
+                        </button>
+                    </div>
+                </div>
+            </div>
+            <nav class="navbar-mobile">
+                <div class="container-fluid">
+                    <ul class="navbar-mobile__list list-unstyled">
+                        <li class="has-sub">
+                            <a class="js-arrow" href="#">
+                                <i class="fas fa-tachometer-alt"></i>Dashboard
+                            </a>
+                            <ul class="navbar-mobile-sub__list list-unstyled js-sub-list">
+                                <li>
+                                    <a href="index.html">Member</a>
+                                    @Html.ActionLink(linkText: "Register Member", actionName: "create", controllerName: "RegisterMember")
+
+                                </li>
+                                <li>
+                                    <a href="index2.html">Update Member</a>
+                                    @Html.ActionLink(linkText: "Update Member", actionName: "Edit", controllerName: "RegisterMember", routeValues: new { id = 0 }, htmlAttributes: null)
+                                </li>
+                                <li>
+                                    <a href="index3.html">Payment Details</a>
+                                    @Html.ActionLink(linkText: "Payment Details", actionName: "Details", controllerName: "RegisterMember", routeValues: new { id = 0 }, htmlAttributes: null)
+
+                                </li>
+                                <li>
+                                    <a href="index4.html">Dashboard 4</a>
+                                </li>
+                            </ul>
+                        </li>
+
+
+                        <li>
+                            <a href="form.html">
+                                <i class="far fa-check-square"></i> Member List
+                            </a>
+                        </li>
+
+                        <li class="has-sub">
+                            <a class="js-arrow" href="#">
+                                <i class="fas fa-calendar-alt"></i>Events
+                            </a>
+                            <ul class="navbar-mobile-sub__list list-unstyled js-sub-list">
+                                <li>
+                                    <a href="button.html">Create</a>
+                                </li>
+                                <li>
+                                    <a href="badge.html">Update</a>
+                                </li>
+
+                            </ul>
+                        </li>
+
+                    </ul>
+                </div>
+            </nav>
+        </header>
+        <!-- END HEADER MOBILE-->
+        <!-- MENU SIDEBAR-->
+        <aside class="menu-sidebar d-none d-lg-block">
+
+            <div class="menu-sidebar__content js-scrollbar1">
+                <nav class="navbar-sidebar">
+                    <ul class="list-unstyled navbar__list">
+                        <li class="active has-sub">
+                            <a class="js-arrow" href="#">
+                                <i class="fas fa-tachometer-alt"></i>Dashboard
+                            </a>
+                            <ul class="list-unstyled navbar__sub-list js-sub-list">
+                                <li>
+
+                                    @Html.ActionLink(linkText: "Register Member", actionName: "create", controllerName: "RegisterMember")
+                                </li>
+                                <li>
+
+                                    @Html.ActionLink(linkText: "Update Member", actionName: "Edit", controllerName: "RegisterMember", routeValues: new { id = 0 }, htmlAttributes: null)
+                                </li>
+                                <li>
+
+                                    @Html.ActionLink(linkText: "Payment Details", actionName: "Details", controllerName: "RegisterMember", routeValues: new { id = 0 }, htmlAttributes: null)
+
+                                </li>
+                                <li>
+                                    <a href="index4.html">Dashboard 4</a>
+                                </li>
+                            </ul>
+                        </li>
+
+
+                        <li>
+                            <a href="form.html">
+                                <i class="far fa-check-square"></i> Member List
+                            </a>
+                        </li>
+
+                        <li class="has-sub">
+                            <a class="js-arrow" href="#">
+                                <i class="fas fa-calendar-alt"></i>Events
+                            </a>
+                            <ul class="navbar-mobile-sub__list list-unstyled js-sub-list">
+                                <li>
+                                    <a href="button.html">Create</a>
+                                </li>
+                                <li>
+                                    <a href="badge.html">Update</a>
+                                </li>
+
+
+                            </ul>
+                        </li>
+
+                    </ul>
+                </nav>
+            </div>
+        </aside>
+        <!-- END MENU SIDEBAR-->
+        <!-- PAGE CONTAINER-->
+        <!-- HEADER DESKTOP-->
+        <!-- MAIN CONTENT-->
+        <div class="main-content">
+            <div class="section__content section__content--p30">
+               
+                <div class="container-fluid">
+                    <p>
+                        @Html.ActionLink("Create New", "Create")
+                    </p>
+                    <h2>NNZFSC Members</h2> <br />
+                    <div class="row">
+
+                        <div class="col-md-9">
+                            <!--design here-->
+                            <div class="table-responsive table--no-card m-b-30" >
+                                <table class="table table-borderless table-striped" style="font-size:12px;">
+                                    <tr>
+                                        <th>
+                                            @Html.DisplayNameFor(model => model.MemberFirstName)
+                                        </th>
+                                        <th>
+                                            @Html.DisplayNameFor(model => model.MemberMiddleName)
+                                        </th>
+                                        <th>
+                                            @Html.DisplayNameFor(model => model.MemberLastName)
+                                        </th>
+                                        <th>
+                                            @Html.DisplayNameFor(model => model.MemberAddress)
+                                        </th>
+                                        <th>
+                                            @Html.DisplayNameFor(model => model.EmailAddress)
+                                        </th>
+                                        <th>
+                                            @Html.DisplayNameFor(model => model.MembershipAmount)
+                                        </th>
+                                        <th>
+                                            @Html.DisplayNameFor(model => model.MembershipDate)
+                                        </th>
+                                        <th>
+                                            @Html.DisplayNameFor(model => model.MembershipExpiryDate)
+                                        </th>
+                                        <th>
+                                            @Html.DisplayNameFor(model => model.Gender)
+                                        </th>
+                                        <th>
+                                            @Html.DisplayNameFor(model => model.CreateBy)
+                                        </th>
+                                        <th>Action</th>
+                                    </tr>
+
+                                    @foreach (var item in Model)
+                                         {
+                                        <tr>
+                                            <td>
+                                                @Html.DisplayFor(modelItem => item.MemberFirstName)
+                                            </td>
+                                            <td>
+                                                @Html.DisplayFor(modelItem => item.MemberMiddleName)
+                                            </td>
+                                            <td>
+                                                @Html.DisplayFor(modelItem => item.MemberLastName)
+                                            </td>
+                                            <td>
+                                                @Html.DisplayFor(modelItem => item.MemberAddress)
+                                            </td>
+                                            <td>
+                                                @Html.DisplayFor(modelItem => item.EmailAddress)
+                                            </td>
+                                            <td>
+                                                @Html.DisplayFor(modelItem => item.MembershipAmount)
+                                            </td>
+                                            <td>
+                                                @Html.DisplayFor(modelItem => item.MembershipDate)
+                                            </td>
+                                            <td>
+                                                @Html.DisplayFor(modelItem => item.MembershipExpiryDate)
+                                            </td>
+                                            <td>
+                                                @Html.DisplayFor(modelItem => item.Gender)
+                                            </td>
+                                            <td>
+                                                @Html.DisplayFor(modelItem => item.CreateBy)
+                                            </td>
+                                            <td>
+
+                                                @Html.ActionLink("Edit", "Edit", new { id = item.MemberId }) |
+                                                @*@Html.ActionLink("Renew", "Edit", new { id = item.MemberId }) |*@
+                                                @Html.ActionLink(linkText: "Renew", actionName: "Create", controllerName: "Payment", routeValues: new { id = item.MemberId }, htmlAttributes: null)|
+                                                @Html.ActionLink("Delete", "Delete", new { id = item.MemberId }, new { onclick = "return confirm('Are you sure you wish to delete this Member Rgistration ?');" })
+                                            </td>
+                                        </tr>
+                                    }
+
+                                </table>
+                                </div>
+                            </div>
+
+                                </div>
+
+                            </div>
+
+
+
+                        </div>
+
+
+
+                    </div>
+          
+        <!-- END MAIN CONTENT-->
+        <!-- END PAGE CONTAINER-->
+    </div>
+
+
+    <!--- Script-->
+    <script src="~/Dashboard/jquery-3.2.1.min.js"></script>
+    @*<script src="~/Dashboard/popper.min.js"></script>*@
+    <script src="~/Dashboard/bootstrap.min.js"></script>
+    @*<script src="~/Dashboard/slick.min.js"></script>
+    <script src="~/Dashboard/wow.min.js"></script>*@
+
+    <script src="~/Dashboard/animsition.min.js"></script>
+    @*<script src="~/Dashboard/bootstrap-progressbar.min.js"></script>
+    <script src="~/Dashboard/jquery.waypoints.min.js"></script>
+    <script src="~/Dashboard/jquery.counterup.min.js"></script>
+    <script src="~/Dashboard/circle-progress.min.js"></script>
+    <script src="~/Dashboard/perfect-scrollbar.js"></script>
+
+    <script src="~/Dashboard/Chart.bundle.min.js"></script>
+    <script src="~/Dashboard/select2.min.js"></script>*@
+
+    <script src="~/Dashboard/main.js"></script>
+
+</body>
+
