fixed Login UI view

--- a/NNZFSC/Views/Shared/_LoginPartial.cshtml
+++ b/NNZFSC/Views/Shared/_LoginPartial.cshtml
@@ -6,10 +6,11 @@
     @Html.AntiForgeryToken()
 
     <ul class="nav navbar-nav navbar-right">
+        <li>@Html.ActionLink("Dashboard", "AdminDashboard", "Dashboard", null, new { @class = "nav-link", id = "dashboard" })</li>
         <li>
-            @Html.ActionLink("Hello " + User.Identity.GetUserName() + "!", "Index", "Manage", routeValues: null, htmlAttributes: new { title = "Manage" })
+            @Html.ActionLink("Hello " + User.Identity.GetUserName() + "!", "Index", "Manage", null, new { @class = "nav-link", id = "dashboard" })
         </li>
-        <li><a href="javascript:document.getElementById('logoutForm').submit()">Log off</a></li>
+        <li><a class="nav-link" href="javascript:document.getElementById('logoutForm').submit()">Log off</a></li>
     </ul>
     }
 }
